# PocketProSBA

./: .blackboxrules  .dockerignore  .env.chromadb  .env.example  .env.template  .gitignore  A1Starter1A.bat  A1Starter1A.ps1  A1Starter1A.sh  AGENTS.md  CHROMADB_RENDER_DEPLOYMENT.md  CONNECTIVITY_SOLUTION_SUMMARY.md  CORS_CONNECTION_FIXES.md  CORS_PROXY_FIX_GUIDE.md  DEPLOYMENT.md  DOCKER_BROWSER_URLS.md  DOCKER_CONFIGURATION.md  DOCKER_CONNECTION_FIX.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.multi  Dockerfile.backend.prod  Dockerfile.chromadb  Dockerfile.dev  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.frontend.prod  Dockerfile.frontend.render  Dockerfile.frontend.simple  Dockerfile.optimized  Dockerfile.production  Dockerfile.production.fixed  Dockerfile.production.optimized  Dockerfile.render  Dockerfile.render.full  Dockerfile.solo.render  FINALPRODUCTION.md  FIXES_SUMMARY.md  FIX_502_APPLIED.md  FIX_RENDER_APPLIED.md  (+304 more)
.github/: copilot-instructions.md
.lean_ai/: lean_ai.db
backend/: .env.example  Dockerfile  app.py  app_corrected.py  assistant_test_results.txt  comprehensive_test.txt  concierge_results.txt  concierge_test_results.txt  config.py  config.yaml  conftest.py  enhanced_gemini_rag_service.py  gemini_rag_service.py  gemini_test.txt  rag.py  requirements-full.txt  requirements.txt  requirements_updated.txt  run.py  run_corrected.py  run_fixed.py  search_test_results.txt  server.js  simple_test.py  test_all_assistants.py  test_concierge.py  test_concierge_complete.py  test_concierge_comprehensive.py  test_concierge_simple.py  test_concierge_workflows.py  test_concierge_workflows_fixed.py  test_file_agent.py  test_search_assistant.py  verify_concierge_production.py  verify_environment.py
backend/app/: __init__.py
backend/assistants/: __init__.py  base.py  concierge.py  file.py  function.py  search.py  (+2 more)
config/: chroma-auth.json  monitoring.yml
docs/: APP_STANDARD_TEMPLATE.md  SECURITY_AND_MONITORING.md  TEAM_WORKFLOW_API.md  api.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-og  Dockerfile.backup  Dockerfile.bak  Dockerfile.debug  Dockerfile.dev  Dockerfile.fix  Dockerfile.multi  Dockerfile.new  Dockerfile.render.full  Dockerfile.updated  REACT18_UPGRADE.md  fix-eslint-errors.ps1  nginx.conf  nginx.dev.conf  nginx.prod.conf  package-lock.json  package.json  update-docker.ps1
instance/: app.db  dev.db
pocket-pro-sba-distribution/: .env.example  .gitignore  Dockerfile.frontend  Dockerfile.production  LICENSE.txt  README.md  RegressionTest.bat  RegressionTest.sh  Start.bat  Start.command  Start.sh  Stop.bat  Stop.command  Stop.sh  Test.bat  Test.sh  docker-compose.yml  nginx.conf  run.py  sleek-layout.css  wsgi.py
routes/: document_routes.py
scripts/: backend-entrypoint.sh  chromadb-entrypoint.sh  finalize_sba_bundle.py  fix_sba_content_explorer_urls.py  fix_start_sh_line_endings.py  inspect_chroma.py  inspect_sba_explorer_bundle.py  patch_prebuilt_api_paths.py  production_test.py  smoke_test.py  verify_app194_patch.py  verify_files_health_fix.py  verify_sba_content_articles.py
services/: __init__.py  chroma_service.py
shared/: README.md
src/: index.js
templates/: base.html
terminals/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+13 more)
tests/: nginx_test.sh  test_api_endpoints.py  test_app.py  test_config.py  test_e2e_chroma_startup.py  test_models.py  test_simple_vector_store.py
utils/: __init__.py  error_handling.py  errors.py
(+785 files in other folders)
