[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.42.0", "pip>=23.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketpro-sba"
version = "1.0.0"
description = "PocketPro SBA Edition - RAG-powered business assistant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "StainlessDeoism.biz", email = "support@stainlessdeoism.biz"}
]
keywords = ["rag", "sba", "business", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/pocketpro-sba"
Repository = "https://github.com/yourusername/pocketpro-sba"
Issues = "https://github.com/yourusername/pocketpro-sba/issues"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]
